--- a/images/custom/Containerfile
+++ b/images/custom/Containerfile
@@ -126,6 +126,7 @@ RUN export APP_INSTALL_ARGS="" && \
     --no-backups \
     --skip-redis-config-generation \
     --verbose \
+    --override \
     /home/frappe/frappe-bench && \
   cd /home/frappe/frappe-bench && \
   echo "{}" > sites/common_site_config.json && \
